tests/src/frontend/typechecking/invalid/superfluous_return5.sk
fun main(): void {
  x = 0;
  while (x < 2) {
    !x = x + 1;
    void
  } else {
    return void
  }
}
